@@ -20,7 +20,7 @@ url --url=$tree
 # If any cobbler repo definitions were referenced in the kickstart profile, include them here.
 $yum_repo_stanza
 # Network information
-network --bootproto=dhcp --device=eth0 --onboot=on
+SNIPPET::network_config
 # Reboot after installation
 reboot
 
