@@ -10,6 +10,7 @@ Cobbler CHANGELOG
 - (FEAT) added livecd based physical machine cloner script to "contrib"
 - (FEAT) enable import for debian ISOs and mirrors (1 distro at a time for now)
 - (FEAT) auto-create rescue profile objects
+- (FEAT) included network_config snippet and added --static=0/1 to system objects
 
 - ??? - 1.2.5 (pending)
 - (BUGF) expose --arch for "cobbler image add"
